Responsive mobile tweaks

--- a/public/the_bridge_templates/static/v2.html
+++ b/public/the_bridge_templates/static/v2.html
@@ -2,17 +2,38 @@
     <div class="container">
         <div class="header">
           <br><br>
-          <p class="lead">Our contributors are hard at work on the new <b>"jobs"</b> engine. Have a look at what we're building... it's a complete upgrade of our automatic data integration platform.</p>
-          <p class="lead">Think of <strong>OpenFn</strong> as your own personal robot whose job it is to:</p>
-          <p class="lead">&nbsp;&nbsp; (1) constantly fetch data from your connected technologies,</p>
-          <p class="lead">&nbsp;&nbsp; (2) instantly process those data however you like,</p>
-          <p class="lead">&nbsp;&nbsp; (3) and send them to people or other systems <em>without ever making a mistake</em>.</p>
-          <p class="lead">When crucial information flows quickly in your organization, you can make better decisions, faster. After you check out the new jobs engine below, click here to look at out how we generate change: <strong><a href="/impact">our impact model</a></strong>.</p>
+          <p class="lead">
+            Our contributors are hard at work on the new <b>"jobs"</b> engine. 
+            Have a look at what we're building... 
+            it's a complete upgrade of our automatic data integration platform.
+          </p>
+          <p class="lead">
+            Think of <strong>OpenFn</strong> as your own personal robot whose 
+            job it is to:
+          </p>
+          <p class="lead">
+            &nbsp;&nbsp; (1) constantly fetch data from your connected 
+            technologies,
+          </p>
+          <p class="lead">
+            &nbsp;&nbsp; (2) instantly process those data however you like,
+          </p>
+          <p class="lead">
+            &nbsp;&nbsp; (3) and send them to people or other systems 
+            <em>without ever making a mistake</em>.
+          </p>
+          <p class="lead">
+            When crucial information flows quickly in your organization, 
+            you can make better decisions, faster. 
+            After you check out the new jobs engine below, 
+            click here to look at out how we generate change: 
+            <strong><a href="/impact">our impact model</a></strong>.
+          </p>
           <br><br>
         </div>
 
         <div class="jumbotron">
-          <h1>1. Choose an origin and destination.</h1>
+          <h2>1. Choose an origin and destination.</h2>
           <p class="lead">We'll watch for new activity from an origin, process it accoring to your instructions, and load it into a destination at approximately 3*10^8 m/s. (That's really fast.)</p>
           <div class="col-xs-5 center">
             <div class="form-group">
@@ -47,7 +68,7 @@
         </div>
 
         <div class="jumbotron">
-          <h1>2. Select an event.</h1>
+          <h2>2. Select an event.</h2>
           <p class="lead">Which event should we watch for in CommCare?</p>
             <div class="form-group">
               <label class="control-label">Origin Event</label>
@@ -67,7 +88,7 @@
         </div>
 
         <div class="jumbotron">
-          <h1>3. Define some actions.</h1>
+          <h2>3. Define some actions.</h2>
           <p class="lead">What do you want your robot to do? We're looking for <em>verbs</em> and <em>nouns</em> here.</p>
           <div class="row">
           <div class="col-xs-6">
@@ -128,7 +149,7 @@
         </div>
 
         <div class="jumbotron">
-          <h1>4. Teach your bot the job.</h1>
+          <h2>4. Teach your bot the job.</h2>
           <p class="lead">You do this one by hand, we'll take care of the next million. Show us how you want to create lab results and update patients in DHIS2 using data from CommCare.</p>
           <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -137,12 +158,22 @@
           <div class="card card-block create">
           <p>Create new lab results</p>
             <div class="form-group">
-              <label class="control-label" style="color: red;">Date (required)</label>
+              <label class="control-label" style="color: red;">
+                Date (required)
+              </label>
               <div class="controls">
                 <div class="input-group">
                   <input type="text" placeholder="datetime" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -163,7 +194,15 @@
                 <div class="input-group">
                   <input type="text" placeholder="text (255)" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -184,7 +223,16 @@
                 <div class="input-group">
                   <input type="text" placeholder="text (255)" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
+
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -205,7 +253,16 @@
                 <div class="input-group">
                   <input type="text" placeholder="number (10,2)" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
+
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -229,7 +286,16 @@
                 <div class="input-group">
                   <input type="text" placeholder="text (255)" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
+
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -250,7 +316,16 @@
                 <div class="input-group">
                   <input type="text" placeholder="reference (id)" class="form-control" aria-label="...">
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
+
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -276,7 +351,16 @@
                     <option>(That's a little humor for you.)</option>
                   </select>
                   <div class="input-group-btn">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle"></i> data from CommCare <span class="caret"></span></button>
+                    <button type="button"
+                      class="btn btn-primary dropdown-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      <span class="hidden-sm-down">
+                        <i class="fa fa-plus-circle"></i>
+                        data from commcare
+                      </span>
+                    </button>
+
                     <ul class="dropdown-menu dropdown-menu-right">
                       <li><a href="#">Patient: Name (text)</a></li>
                       <li><a href="#">Patient: DoB (date)</a></li>
@@ -295,7 +379,7 @@
         </div>
 
         <div class="jumbotron">
-          <h1>5. Test it out.</h1>
+          <h2>5. Test it out.</h2>
           <p class="lead">Look at these sample data we found in CommCare. Review what we'll do in DHIS2. If everything checks out, click "Test!" and see the result.</p>
           <div class="card card-block create">
             <p><strong>Source data</strong> from CommCare: {name: "Anna", age: 14}</p>
@@ -309,7 +393,7 @@
         </div>
 
         <div class="jumbotron">
-          <h1>6. Set it and forget it.</h1>
+          <h2>6. Set it and forget it.</h2>
           <p class="lead">You gave this puppy wings, now give it a name and let it fly!</p>
           <input type="text" class="form-control" placeholder="name of your job">
         <br>
