--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -9,7 +9,13 @@
       </div>
     </div>
     <div class="numbers">
-        <h4><span class="digits">{{productPublicCount}}</span> technologies, <span class="digits">{{orgCount}}</span> organizations, <span class="digits">{{productConnectedCount}}</span> connected apps, and <span class="digits">{{submissionCount | number }}</span> transactions.
+        <h4>
+          <span class="digits">{{productPublicCount}}</span> technologies, 
+          <span class="digits">{{orgCount}}</span> organizations, 
+          <br class="hidden-sm-up" />
+          <span class="digits">{{productConnectedCount}}</span> connected apps, and 
+          <br class="hidden-sm-up" />
+          <span class="digits">{{submissionCount | number }}</span> transactions.
         </h4>
     </div>
   </header>
