--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -108,8 +108,7 @@
             <div class="card-footer text-muted small">
               <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
               <a class="card-link pull-right" ng-show="product.integrated && !(product.integration_type)" style="cursor: pointer;" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Automate <i class="fa fa-flash"></i></a>
-              <a class="card-link pull-right" ng-show="product.integration_type=='tr'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Automate <i class="fa fa-flash"></i></a>
-              <a class="card-link pull-right" ng-show="product.integration_type=='cc'" ng-href="https://medium.com/@openFn/an-exciting-week-833b08c8699b" target="_blank">Automate <i class="fa fa-flash"></i></a>
+              <a class="card-link pull-right" ng-show="product.integration_type=='beta'" data-toggle="modal" data-target="#beta_modal">Automate <i class="fa fa-flash"></i></a>
               <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Upvote for {{product.name}} to support a new adapter."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
               <a class="card-link" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
               <span class="pull-right"><small><ng-pluralize count="product.reviews_count" when="{'0': '','one': '1 review','other': '{} reviews'}"></ng-pluralize></small></span>
@@ -120,6 +119,27 @@
       <!-- </packery-object>
         </packery> -->
 </div>
+
+<div class="modal fade" id="beta_modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h2>OpenFn 2.0</h2>
+      </div>
+      <div class="modal-body">
+        <p>This product is connected through our new platform. We have a handful of high-volume users and the connections are stable, but we are still asking that new clients connect by contacting us first as we polish up the user interface.
+          If you want to connect, email OpenFn at:</p>
+        <p class="center"><a href="mailto:beta@openfn.org" target="_blank"><i class="fa fa-envelope"></i> beta@openfn.org</a></p>
+        <p>We look forward to hearing from you.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
 function sticky_relocate() {
   var window_top = $(window).scrollTop();
