--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -88,11 +88,8 @@
 
   </div>
 
-  <div class="featurette">
-    <p class="lead">Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</p>
-    <p class="lead">Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</p>
-    <p class="lead">By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</p>
+  <div class="featurette center">
+    <p class="lead">*<u><a href="mailto:admin@openfn.org">contact</a></u> us for a custom plan to fit your needs.</p>
   </div>
-  
-</div>
 
+</div>
