Point to DIY (open source tools) on github

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -88,8 +88,8 @@
 
   </div>
 
-  <div class="featurette center">
-    <p class="lead">*<u><a href="mailto:admin@openfn.org">contact</a></u> us for a custom plan to fit your needs.</p>
+  <div class="featurette">
+    <p class="lead">Please <u><a href="mailto:admin@openfn.org">contact</a></u> us for a custom plan to fit your organization's needs or full-service integration consulting, including local deployments. Check out <a href="https://github.com/OpenFn/core">OpenFn on Github</a> for information about DIY hosting of our open-source itegration tools.</p>
   </div>
 
 </div>
