--- a/public/the_bridge_templates/footer.html
+++ b/public/the_bridge_templates/footer.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
     <small>
       <p class="text-center">
-        OpenFn is connecting technologies for a more efficient development sector. All of our code is open source.
+        OpenFn is connecting technologies for a more efficient development sector. All of our integration tools are open source.
         <br><br>
         <a href="https://github.com/OpenFn/" target="_blank">
           Join our developers on github <i class="fa fa-github fa-lg"></i>
